[gd_scene load_steps=2 format=3 uid="uid://d1k2m3n4p5q6r"]

[ext_resource type="Script" path="res://scripts/NewGame.gd" id="1"]

[node name="NewGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "New Game Setup"
horizontal_alignment = 1

[node name="NameSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/NameSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enter your overclocker name:"

[node name="NameInput" type="LineEdit" parent="MarginContainer/VBoxContainer/NameSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Anonymous OC'er"

[node name="ExperienceSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ExperienceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose your experience level:"

[node name="BeginnerButton" type="Button" parent="MarginContainer/VBoxContainer/ExperienceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Beginner (Safe settings, guided experience)"
toggle_mode = true
button_group = SubResource("ButtonGroup_1")

[node name="IntermediateButton" type="Button" parent="MarginContainer/VBoxContainer/ExperienceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Intermediate (Some freedom, moderate risk)"
toggle_mode = true
button_group = SubResource("ButtonGroup_1")

[node name="ExpertButton" type="Button" parent="MarginContainer/VBoxContainer/ExperienceSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Expert (Full control, high risk/reward)"
toggle_mode = true
button_group = SubResource("ButtonGroup_1")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RAMSelection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/RAMSelection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose your memory kit:"

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/RAMSelection"]
layout_mode = 2
custom_minimum_size = Vector2(0, 300)

[node name="RAMList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/RAMSelection/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ControllerSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ControllerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Choose your memory controller:"

[node name="ControllerOptions" type="OptionButton" parent="MarginContainer/VBoxContainer/ControllerSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back"

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Start Game"
disabled = true

[connection signal="text_changed" from="MarginContainer/VBoxContainer/NameSection/NameInput" to="." method="_on_name_input_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExperienceSection/BeginnerButton" to="." method="_on_experience_selected" binds= [1]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExperienceSection/IntermediateButton" to="." method="_on_experience_selected" binds= [2]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExperienceSection/ExpertButton" to="." method="_on_experience_selected" binds= [3]]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/ControllerSection/ControllerOptions" to="." method="_on_controller_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]